src/main/kubernetes-manifests/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/version: "1.0"
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello
      app.kubernetes.io/version: "1.0"
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/userVolume: |-
          [{
              "name": "proto",
              "secret": {
                  "defaultMode": 420,
                  "secretName": "proto"
              }
          }]
        sidecar.istio.io/userVolumeMount: |-
          [{
              "mountPath": "/var/config/proto",
              "name": "proto",
              "readOnly": true
          }]
      labels:
        app.kubernetes.io/name: hello
        app.kubernetes.io/version: "1.0"
      namespace: test-grpc
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/raffaelespazzoli/hello-grpc:1.0
          imagePullPolicy: Always
          name: hello
          ports:
            - containerPort: 9000
              name: grpc
              protocol: TCP
