src/main/kubernetes-manifests/AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "jwt-must"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
